# RAG-Pipeline-with-LangChain-Ollama-Docker-End-to-End-Local-LLM-System-

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: langchain_rag.py  llm.py  main.py  retrieval.py
