[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.8.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
